rename package and get ant test working